salve poema oloko

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <title>site da nicole</title>
 </head>
 <body>
-    <P>tralala</P>
-    
+    <h1>tralala</h1>
+    <p>"Vi ontem um bicho
+Na imundície do pátio
+Catando comida entre os restos.
+Vi um bicho
+Na imundície do pátio
+Catando comida entre os restos.
+Quando a fouce do sol
+Aparece no céu,
+Ele se esconde,
+O bicho que eu vi.
+Ele se esconde,
+O bicho que eu vi." </p>
 </body>
 </html>
