--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
-<!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>site da nicole</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Aluraflix</title>
 </head>
+
 <body>
-    <h1>tralala</h1>
-    <p>"Vi ontem um bicho
-Na imundície do pátio
-Catando comida entre os restos.
-Vi um bicho
-Na imundície do pátio
-Catando comida entre os restos.
-Quando a fouce do sol
-Aparece no céu,
-Ele se esconde,
-O bicho que eu vi.
-Ele se esconde,
-O bicho que eu vi." </p>
+    <header>ALURAFLIX</header>
+
+    <section>
+        <div>
+            <h1>PODRIDÃO CÉREBRAL</h1>
+            <p>#Brain rot</p>
+        </div>
+
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=NH9bmkLZHpk&t=1s"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+
 </body>
+
 </html>
