--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <html lang="pt-BR">
 
 <head>
-  
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="styles.css">
+    <link rel="Lexend" href="https://fonts.googleapis.com">
+    <link rel="Lexend" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href=""https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
+        rel="stylesheet">
     <title>NicolePacheco</title>
 </head>
 
 <body>
-    <header>NicolePacheco<title
+    <header>NicolePacheco</header>
 
     <section class="chamada">
         <div class="chamada-texto">
