--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="Lexend" href="https://fonts.googleapis.com">
     <link rel="Lexend" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href=""https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
+        href= "https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
         rel="stylesheet">
     <title>NicolePacheco</title>
 </head>
