--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
     <section class="categoria">
         <h2>Como Largar a procastinação</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=GISBDbv1cEM"
-            <a href="https://www.youtube.com/watch?v=KnA7pyTPKPs"
-            </a>
-            <a href="https://www.youtube.com/watch?v=KnA7pyTPKPs"
-            </a>
-            <a href="https://www.youtube.com/watch?v=cKHA9l4xJeM"
-            <a href="https://www.youtube.com/watch?v=iRWeyvVI4XA"
+            <iframe="https://www.youtube.com/watch?v=GISBDbv1cEM"
+            <iframe
+            src="https://www.youtube.com/watch?v=KnA7pyTPKPs"frameborder="0"allowfullscreen></iframe>
+            <iframe="https://www.youtube.com/watch?v=KnA7pyTPKPs"
+            <iframe="https://www.youtube.com/watch?v=cKHA9l4xJeM"
+            <iframe>="https://www.youtube.com/watch?v=iRWeyvVI4XA"><iframe src="" ="0"></iframe>
         </div>
     </section>
 
