--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
     <section class="categoria">
         <h2>Como Largar a procastinação</h2>
         <div class="categoria-videos">
-            <iframe="https://www.youtube.com/watch?v=GISBDbv1cEM"
+            <iframe
+            src="https://www.youtube.com/watch?v=GISBDbv1cEM"frameborder="0"allowfullscreen></iframe>
             <iframe
             src="https://www.youtube.com/watch?v=KnA7pyTPKPs"frameborder="0"allowfullscreen></iframe>
-            <iframe="https://www.youtube.com/watch?v=KnA7pyTPKPs"
-            <iframe="https://www.youtube.com/watch?v=cKHA9l4xJeM"
-            <iframe>="https://www.youtube.com/watch?v=iRWeyvVI4XA"><iframe src="" ="0"></iframe>
+            <iframe
+            src="https://www.youtube.com/watch?v=KnA7pyTPKPs"frameborder="0"allowfullscreen></iframe>
+            <iframe
+            src="https://www.youtube.com/watch?v=cKHA9l4xJeM"frameborder="0"allowfullscreen></iframe>
+            <iframe
+            src="https://www.youtube.com/watch?v=iRWeyvVI4XA"frameborder="0"allowfullscreen></iframe>
         </div>
     </section>
 
