--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>Como Largar a procastinação</h2>
         <div class="categoria-videos">
             <iframe
-            src="https://www.youtube.com/watch?v=GISBDbv1cEM"frameborder="0"allowfullscreen></iframe>
+            src="https://www.youtube.com/embed/v=GISBDbv1cEM"frameborder="0"allowfullscreen></iframe>
             <iframe
             src="https://www.youtube.com/watch?v=KnA7pyTPKPs"frameborder="0"allowfullscreen></iframe>
             <iframe
