--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <h2>Como Largar a procastinação</h2>
         <div class="categoria-videos">
             <iframe
-            src="https://www.youtube.com/embed/v=GISBDbv1cEM"frameborder="0"allowfullscreen></iframe>
+            src="https://www.youtube.com/embed/GISBDbv1cEM"frameborder="0"allowfullscreen></iframe>
             <iframe
             src="https://www.youtube.com/embed/KnA7pyTPKPs"frameborder="0"allowfullscreen></iframe>
             <iframe
-            src="https://www.youtube.com/watch?v=cKHA9l4xJeM"frameborder="0"allowfullscreen></iframe>
+            src="https://www.youtube.com/embed/cKHA9l4xJeM"frameborder="0"allowfullscreen></iframe>
             <iframe
-            src="https://www.youtube.com/watch?v=iRWeyvVI4XA"frameborder="0"allowfullscreen></iframe>
+            src="https://www.youtube.com/embed/iRWeyvVI4XA"frameborder="0"allowfullscreen></iframe>
         </div>
     </section>
 
