--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/NH9bmkLZHpk&t=1s"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/NH9bmkLZHpk&t=1s" " frameborder="0"allowfullscreen></iframe>
         </div>
     </section>
 
